@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed handling of binary content in blobs and similar fields for Ruby/MySQL and SQLite #409 [xal]
+
 * Added dynamic attribute-based finders as a cleaner way of getting objects by simple queries without turning to SQL. 
   They work by appending the name of an attribute to <tt>find_by_</tt>, so you get finders like <tt>Person.find_by_user_name,
   Payment.find_by_transaction_id</tt>. So instead of writing <tt>Person.find_first(["user_name = ?", user_name])</tt>, you just do
